--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
   myFirstJob:
     runs-on: ubuntu-latest
     steps:
+      - name: My First Action
+        uses: actions/checkout@v5
       - name: My First Step
         run: printenv
       - name: My Second Step
@@ -16,4 +18,7 @@ jobs:
           ls
           cat file.txt
       - name: Sleep Step
-        run: sleep 20
+        run: sleep 5
+      - name: ls repo
+        run: | 
+          ls
